feat: maybe works now with openGL, just needed to rework the whole gradle.build of javaFX